[tool.poetry]
name = "loading"
version = "0.1.0"
description = "A Python tool for loading and analyzing matrix data"
authors =["Koia"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"